@@ -1,0 +1,1 @@
+java -Dbdd6502.trace=true -jar ..\BDD6502\target\BDD6502-1.0.9-SNAPSHOT-jar-with-dependencies.jar
